# cl3dmodel

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md
api/: cl3dmodel.h
src/: cl3dmodel.cpp
